--- a/style.css
+++ b/style.css
@@ -1,5 +1,25 @@
 body {
+  text-align: center;
   width: 100%;
   height: 100%;
   margin: 0;
+}
+nav a {
+
+  background: lightgrey;
+  padding: 0 10px;
+}
+#featured-property p {
+width: 50%;
+margin: 20px auto;
+}
+#featured-property img{
+width: 50%;
+}
+
+#details div {
+
+  float: left;
+  width: 25%;
+  background: coral;
 }
